// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getAttendancePostMessage should format correctly when there is a team updates meeting 1`] = `
":dancing_banana: Rehearsal day! :dancing_banana: <!channel> 
*Today's rehearsal:* Bills Bills Bills
 *Run through:* Poison

 *Team updates meeting at 6:30! All welcome* :tada:
Please indicate whether or not you can attend tonight by reacting to this message with :thumbsup: (present) or :thumbsdown: (absent).
Facilitator please respond with :raised_hands:!
To volunteer for Physical warm up, respond with :muscle: For Musical warm up, respond with :musical_note:."
`;

exports[`utils getAttendancePostMessage should format correctly when there is no run through 1`] = `
":dancing_banana: Rehearsal day! :dancing_banana: <!channel> 
*Today's rehearsal:* Bills Bills Bills
  Please indicate whether or not you can attend tonight by reacting to this message with :thumbsup: (present) or :thumbsdown: (absent).
Facilitator please respond with :raised_hands:!
To volunteer for Physical warm up, respond with :muscle: For Musical warm up, respond with :musical_note:."
`;

exports[`utils getAttendancePostMessage should format correctly when there is no team updates meeting 1`] = `
":dancing_banana: Rehearsal day! :dancing_banana: <!channel> 
*Today's rehearsal:* Bills Bills Bills
 *Run through:* Poison

 Please indicate whether or not you can attend tonight by reacting to this message with :thumbsup: (present) or :thumbsdown: (absent).
Facilitator please respond with :raised_hands:!
To volunteer for Physical warm up, respond with :muscle: For Musical warm up, respond with :musical_note:."
`;

exports[`utils getRehearsalMusicMessage should format correctly with all bits present 1`] = `
"<!channel> Here's the plan for Monday's rehearsal! 

  Team updates meeting at 6:30! All welcome :tada:

  We'll be doing Hide and Seek - link-to-hideandseek 

  *Run through*: Dreams  - link-to-dreams 

  Please give the recordings a listen! :sparkles:"
`;

exports[`utils getRehearsalMusicMessage should format correctly with no main song link 1`] = `
"<!channel> Here's the plan for Monday's rehearsal! 

  Team updates meeting at 6:30! All welcome :tada:

  We'll be doing Hide and Seek - I can't find a link for this - please check the Arrangements Folder! 

  *Run through*: Dreams  - link-to-dreams 

  Please give the recordings a listen! :sparkles:"
`;

exports[`utils getRehearsalMusicMessage should format correctly with no run through 1`] = `
"<!channel> Here's the plan for Monday's rehearsal! 

  Team updates meeting at 6:30! All welcome :tada:

  We'll be doing Hide and Seek - link-to-hideandseek 

  *Run through*: Please check the schedule for more info.  

  Please give the recordings a listen! :sparkles:"
`;

exports[`utils getRehearsalMusicMessage should format correctly with no team updates 1`] = `
"<!channel> Here's the plan for Monday's rehearsal! 

  
  We'll be doing Hide and Seek - link-to-hideandseek 

  *Run through*: Dreams  - link-to-dreams 

  Please give the recordings a listen! :sparkles:"
`;

exports[`utils getRehearsalMusicMessage should format correctly with run through but no link 1`] = `
"<!channel> Here's the plan for Monday's rehearsal! 

  Team updates meeting at 6:30! All welcome :tada:

  We'll be doing Hide and Seek - link-to-hideandseek 

  *Run through*: Dreams  

  Please give the recordings a listen! :sparkles:"
`;
